Update formatting bugs with price and scrollbar

--- a/src/pages/main/dashboard/dashboard.style.css
+++ b/src/pages/main/dashboard/dashboard.style.css
@@ -1,6 +1,11 @@
 .dashboard {
   overflow: scroll;
   max-height: 90vh;
+  min-height: 80vh;
+}
+
+.dashboard::-webkit-scrollbar {
+  width: 0 !important
 }
 
 .history {
